Mon Jun 22 09:33:40 CDT 2009  Phil Mesnier  <mesnier_p@ociweb.com>

	* ACE version 5.7 released.

Tue Jun 16 15:14:52 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_main.cpp:

          For Windows CE/Mobile: when constructing argv[0], quote the full
          path to the exe if it contains spaces (\Program Files\...).

Mon Jun 15 07:45:04 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3673_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added a new test for bugzilla 3673, this test whether exception handling
          works correctly. This doesn't work with CB2007 which is really a compiler
          bug. This test makes it easier to see if other compilers have the same
          bug

Fri Jun 12 19:05:43 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_sys_socket.inl:

          Windows Mobile 6 can return WSAENOPROTOOPT instead of WSAEOPNOTSUPP
          for setsockopt with an unsupported option.

Fri Jun 12 19:16:04 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Revert the change below, Adam has a better fix
        * ace/config-WinCE.h
          Set ACE_LACKS_SO_RCVBUF for WinCE 5, it is not supported

Fri Jun 12 18:37:04 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h
          Set ACE_LACKS_SO_RCVBUF for WinCE 5, it is not supported

Fri Jun 12 14:12:04 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/run_test.lst: Removed !FIXED_BUGS_ONLY from Process_Test. Not
          sure why it's there and I never see Process_Test fail.

Fri Jun 12 11:24:09 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp: Added missing ifdef ACE_HAS_EVENT_POLL.

        * tests/run_test.lst: Removed !FIXED_BUGS_ONLY from those fixed:
          Reactor_Dispatch_Order_Test_Dev_Poll
          Reactor_Remove_Resume_Test_Dev_Poll
          Refcounted_Event_Handler_Test_DevPoll
